# hikvision-isapi-cli

./: .config.yaml  .gitignore  README.md  openapi.json  pyproject.toml  pytest.ini
.github/workflows/: python-publish.yml
docs/: API.md
hikvision_isapi_cli/: __init__.py  client.py
hikvision_isapi_cli/models/: __init__.py  root_type_for_call_status.py  root_type_for_call_status_call_status.py  root_type_for_json_cap_call_status.py  root_type_for_json_cap_call_status_call_status.py  root_type_for_json_cap_call_status_call_status_status.py  root_type_for_json_response_status.py  root_type_for_xml_cap_access_control.py  root_type_for_xml_cap_access_control_access_control.py  root_type_for_xml_cap_access_control_access_control_employee_no_info.py  root_type_for_xml_cap_access_control_access_control_employee_no_info_character_type.py  root_type_for_xml_cap_access_control_access_control_employee_no_info_employee_no.py  root_type_for_xml_cap_access_control_access_control_employee_no_info_is_support_compress.py  root_type_for_xml_cap_access_control_access_control_factory_reset.py  root_type_for_xml_cap_access_control_access_control_factory_reset_mode.py  root_type_for_xml_cap_access_control_access_control_is_support_acs_cfg.py  root_type_for_xml_cap_access_control_access_control_is_support_acs_event.py  root_type_for_xml_cap_access_control_access_control_is_support_acs_event_total_num.py  root_type_for_xml_cap_access_control_access_control_is_support_acs_work_status.py  root_type_for_xml_cap_access_control_access_control_is_support_anti_sneak_cfg.py  root_type_for_xml_cap_access_control_access_control_is_support_attendance_holiday_group.py  root_type_for_xml_cap_access_control_access_control_is_support_attendance_holiday_plan.py  root_type_for_xml_cap_access_control_access_control_is_support_attendance_rule.py  root_type_for_xml_cap_access_control_access_control_is_support_attendance_status_mode_cfg.py  root_type_for_xml_cap_access_control_access_control_is_support_attendance_status_rule_cfg.py  root_type_for_xml_cap_access_control_access_control_is_support_auth_code_info.py  (+240 more)
hikvision_isapi_sk/: __init__.py  session.py  snap.py
templates/: README.md.jinja  client.py.jinja  endpoint_module.py.jinja  package_init.py.jinja
templates/property_templates/: model_property.py.jinja
tests/: conftest.py
(+32 files in other folders)
