[tool.poetry]
name = "hikvision-isapi-cli"
version = "1.0.21"
description = "A client library for accessing Hikvision ISAPI and more"

authors = ["mmascia"]

readme = "README.md"
packages = [
    {include = "hikvision_isapi_cli"},
    {include = "hikvision_isapi_sk"},
]
include = ["CHANGELOG.md", "hikvision_isapi_cli/py.typed", "docs"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.15.4,<0.24.0"
python-dateutil = "^2.8.0"
xmltodict = ">=0.13.0"
pytest-asyncio = "0.20.3"
pytest-aiohttp = "1.0.4"
pytest-cov = "3.0.0"
pytest-freezer = "0.4.6"
pytest-socket = "0.5.1"
pytest-test-groups = "1.0.3"
pytest-sugar = "0.9.6"
pytest-timeout = "2.1.0"
pytest-unordered = "0.5.2"
pytest-picked = "0.4.6"
pytest-xdist = "3.2.1"
pytest = "7.3.1"
#opencv-python = "==4.6.0.66"
#opencv-python-headless = "==4.6.0.66"
#numpy = ">=1.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py310', 'py311']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
    | \.history
  )/
)
'''

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
